--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,6 +1,16 @@
 <%- include('../includes/head.ejs') %>
     </head>
-
     <body>
         <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (products.length > 0) { %>
+                <ul>
+                    <% products.forEach(p => { %>
+                        <li><%= p.productData.title %> (<%= p.qty %>)</li>
+                    <%})%>
+                </ul>
+            <% } else { %>
+                <h1>No Products in Cart!</h1>
+            <% } %>
+        </main>
         <%- include('../includes/end.ejs') %>
