--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -7,10 +7,10 @@
                 <ul>
                     <% products.forEach(p => { %>
                         <li>
-                            <p><%= p.productData.title %> (<%= p.qty %>)</p>
+                            <p><%= p.title %> (<%= p.cartItem.quantity %>)</p>
                             <form action="/cart-delete-item" method="POST">
-                                <input type="hidden" name="productId" value="<%= p.productData.id %>">
-                                <button type="submit" class="btn">Delete</button>
+                                <input type="hidden" name="productId" value="<%= p.id %>">
+                                <button type="submit" class="btn danger">Delete</button>
                             </form>
                         </li>
                     <%})%>
