--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,19 +1,22 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
+
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
             <% if (products.length > 0) { %>
-                <ul>
+                <ul class="cart__item-list">
                     <% products.forEach(p => { %>
-                        <li>
-                            <p><%= p.title %> (<%= p.cartItem.quantity %>)</p>
+                        <li class="cart__item">
+                            <h1><%= p.title %></h1>
+                            <h2>Quantity: <%= p.cartItem.quantity %></h2>
                             <form action="/cart-delete-item" method="POST">
-                                <input type="hidden" name="productId" value="<%= p.id %>">
-                                <button type="submit" class="btn danger">Delete</button>
+                                <input type="hidden" value="<%= p.id %>" name="productId">
+                                <button class="btn danger" type="submit">Delete</button>
                             </form>
                         </li>
-                    <%})%>
+                    <% }) %>
                 </ul>
             <% } else { %>
                 <h1>No Products in Cart!</h1>
